--- a/wiki/help_coding.html
+++ b/wiki/help_coding.html
@@ -15,9 +15,9 @@
         <div class="em_AROUND">
             <h1>Справка по QSP</h1>
             <!-- body start -->
-<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/helpful/help_analyzer.html" class="emHREFTT">&lt; Назад, к странице 37</a></div><div><a href="https://aleksversus.github.io/howdo_faq/helpful/help_interface.html" class="emHREFTT">Вперёд, к странице 39 &gt;</a></div></div>
+<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/wiki/help_analyzer.html" class="emHREFTT">&lt; Назад, к странице 37</a></div><div><a href="https://aleksversus.github.io/howdo_faq/wiki/help_interface.html" class="emHREFTT">Вперёд, к странице 39 &gt;</a></div></div>
 <p>
-<a href="https://aleksversus.github.io/howdo_faq/helpful/help_expressions.html#help_expressions" style="text-decoration:none;" class="emFOLD">Назад: Выражения</a>
+<a href="https://aleksversus.github.io/howdo_faq/wiki/help_expressions.html#help_expressions" style="text-decoration:none;" class="emFOLD">Назад: Выражения</a>
 
 </p>
 <a id="help_coding"></a><h2>Программный код</h2>
@@ -38,7 +38,7 @@
 
 
 </div>
-<a id="чaЫХ"></a><h3>Структура команд</h3>
+<a id="чЙSM"></a><h3>Структура команд</h3>
 <p>
 Все команды в <span class="em_BLCK">QSP</span> составляются по общим принципам:
 
@@ -49,7 +49,7 @@
 
 </div>
 <p>
-Здесь вместо {оператор} может и должен стоять любой оператор <span class="em_BLCK">QSP</span> из тех, что перечислены в разделе <a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_keywords_operator" style="text-decoration:none;" class="emFOLD">"Ключевые слова. Операторы"</a>. Если в команде нет {оператор}, значит на самом деле на этом месте подразумевается <span class="em_BLCK">неявный оператор</span>.
+Здесь вместо {оператор} может и должен стоять любой оператор <span class="em_BLCK">QSP</span> из тех, что перечислены в разделе <a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_keywords_operator" style="text-decoration:none;" class="emFOLD">"Ключевые слова. Операторы"</a>. Если в команде нет {оператор}, значит на самом деле на этом месте подразумевается <span class="em_BLCK">неявный оператор</span>.
 
 </p>
 <div class="Monokai-Code">
@@ -98,7 +98,7 @@
 Здесь <span class="em_BLCK">=</span> — это операция присваивания. Не путайте с операцией сравнения <span class="em_BLCK">равно</span>.
 
 </p>
-<a id="чЯЪь"></a><h3>Порядок записи команд</h3>
+<a id="зФНь"></a><h3>Порядок записи команд</h3>
 <p>
 Вот несколько правил и рекомендаций для корректного написания кода:
 
@@ -606,7 +606,7 @@ bcolor=rgb(func('hex_in_dec','ff'),func('hex_in_dec','34'),func('hex_in_dec','67
 <br>
 
 </div>
-<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/helpful/help_analyzer.html" class="emHREFTT">&lt; Назад, к странице 37</a></div><div><a href="https://aleksversus.github.io/howdo_faq/helpful/help_interface.html" class="emHREFTT">Вперёд, к странице 39 &gt;</a></div></div>
+<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/wiki/help_analyzer.html" class="emHREFTT">&lt; Назад, к странице 37</a></div><div><a href="https://aleksversus.github.io/howdo_faq/wiki/help_interface.html" class="emHREFTT">Вперёд, к странице 39 &gt;</a></div></div>
 <!-- body end -->
             <div class="em_Epigraph">
                 <div class="em_subText">
@@ -634,10 +634,10 @@ bcolor=rgb(func('hex_in_dec','ff'),func('hex_in_dec','34'),func('hex_in_dec','67
  `<a href="start.html" style="text-decoration:none;" class="emFOLD">В начало</a>`
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/help_qsp.html#help_qsp" style="text-decoration:none;" class="emFOLD">Что такое QSP?</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/help_qsp.html#help_qsp" style="text-decoration:none;" class="emFOLD">Что такое QSP?</a>`
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/help_locations.html#help_locations" style="text-decoration:none;" class="emFOLD">Локации</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/help_locations.html#help_locations" style="text-decoration:none;" class="emFOLD">Локации</a>`
 </li>
 <li>
  <span class="em_BLCK">Вывод текста</span>
@@ -646,65 +646,65 @@ bcolor=rgb(func('hex_in_dec','ff'),func('hex_in_dec','34'),func('hex_in_dec','67
  <a href="help/main.html" style="text-decoration:none;" class="emFOLD">Основное окно описания</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_stat.html#help_stat" style="text-decoration:none;" class="emFOLD">Дополнительное окно описания</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_stat.html#help_stat" style="text-decoration:none;" class="emFOLD">Дополнительное окно описания</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_msgbox" style="text-decoration:none;" class="emFOLD">Диалоговое окно</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_msgbox" style="text-decoration:none;" class="emFOLD">Диалоговое окно</a>
 </li>
 </ul>
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/help_acts.html#help_acts" style="text-decoration:none;" class="emFOLD">Действия</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/help_acts.html#help_acts" style="text-decoration:none;" class="emFOLD">Действия</a>`
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/help_goto.html#help_goto" style="text-decoration:none;" class="emFOLD">Переходы</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/help_goto.html#help_goto" style="text-decoration:none;" class="emFOLD">Переходы</a>`
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/help_objs.html#help_objs" style="text-decoration:none;" class="emFOLD">Предметы (инвентарь)</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/help_objs.html#help_objs" style="text-decoration:none;" class="emFOLD">Предметы (инвентарь)</a>`
 </li>
 <li>
  <span class="em_BLCK">Программирование</span>
 <ul>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_principle.html#help_principle" style="text-decoration:none;" class="emFOLD">Порядок работы интерпретатора</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_principle.html#help_principle" style="text-decoration:none;" class="emFOLD">Порядок работы интерпретатора</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_variables.html#help_variables" style="text-decoration:none;" class="emFOLD">Переменные</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_variables.html#help_variables" style="text-decoration:none;" class="emFOLD">Переменные</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_expressions.html#help_expressions" style="text-decoration:none;" class="emFOLD">Выражения</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_expressions.html#help_expressions" style="text-decoration:none;" class="emFOLD">Выражения</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_coding.html#help_coding" style="text-decoration:none;" class="emFOLD">Программный код</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_coding.html#help_coding" style="text-decoration:none;" class="emFOLD">Программный код</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_cycle" style="text-decoration:none;" class="emFOLD">Циклы</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_cycle" style="text-decoration:none;" class="emFOLD">Циклы</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_arrays.html#help_arrays" style="text-decoration:none;" class="emFOLD">Массивы</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_arrays.html#help_arrays" style="text-decoration:none;" class="emFOLD">Массивы</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_strings.html#help_strings" style="text-decoration:none;" class="emFOLD">Строки</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_strings.html#help_strings" style="text-decoration:none;" class="emFOLD">Строки</a>
 <ul>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_regexp.html#help_regexp" style="text-decoration:none;" class="emFOLD">Регулярные выражения</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_regexp.html#help_regexp" style="text-decoration:none;" class="emFOLD">Регулярные выражения</a>
 </li>
 </ul>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_conditional.html#help_conditional" style="text-decoration:none;" class="emFOLD">Условия</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_conditional.html#help_conditional" style="text-decoration:none;" class="emFOLD">Условия</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_organizing.html#help_organizing" style="text-decoration:none;" class="emFOLD">Пользовательские функции и процедуры</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_organizing.html#help_organizing" style="text-decoration:none;" class="emFOLD">Пользовательские функции и процедуры</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_jump.html#help_jump" style="text-decoration:none;" class="emFOLD">Переходы внутри локации, циклы</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_jump.html#help_jump" style="text-decoration:none;" class="emFOLD">Переходы внутри локации, циклы</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_service_locations.html#help_service_locations" style="text-decoration:none;" class="emFOLD">Служебные локации</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_service_locations.html#help_service_locations" style="text-decoration:none;" class="emFOLD">Служебные локации</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_dynamical.html#help_dynamical" style="text-decoration:none;" class="emFOLD">Динамический код</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_dynamical.html#help_dynamical" style="text-decoration:none;" class="emFOLD">Динамический код</a>
 </li>
 </ul>
 </li>
@@ -712,19 +712,19 @@ bcolor=rgb(func('hex_in_dec','ff'),func('hex_in_dec','34'),func('hex_in_dec','67
  <span class="em_BLCK">Оформление</span>
 <ul>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_menu.html#help_menu" style="text-decoration:none;" class="emFOLD">Меню</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_menu.html#help_menu" style="text-decoration:none;" class="emFOLD">Меню</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_sound.html#help_sound" style="text-decoration:none;" class="emFOLD">Звук</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_sound.html#help_sound" style="text-decoration:none;" class="emFOLD">Звук</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_graphics.html#help_graphics" style="text-decoration:none;" class="emFOLD">Графика</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_graphics.html#help_graphics" style="text-decoration:none;" class="emFOLD">Графика</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_interface" style="text-decoration:none;" class="emFOLD">Настройки интерфейса</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_interface" style="text-decoration:none;" class="emFOLD">Настройки интерфейса</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_html.html#help_html" style="text-decoration:none;" class="emFOLD">HTML</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_html.html#help_html" style="text-decoration:none;" class="emFOLD">HTML</a>
 </li>
 </ul>
 </li>
@@ -732,19 +732,19 @@ bcolor=rgb(func('hex_in_dec','ff'),func('hex_in_dec','34'),func('hex_in_dec','67
  <span class="em_BLCK">Расширенные возможности</span>
 <ul>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_inputs.html#help_inputs" style="text-decoration:none;" class="emFOLD">Ввод текста игроком</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_inputs.html#help_inputs" style="text-decoration:none;" class="emFOLD">Ввод текста игроком</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_modules.html#help_modules" style="text-decoration:none;" class="emFOLD">Работа с файлами игр, модули</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_modules.html#help_modules" style="text-decoration:none;" class="emFOLD">Работа с файлами игр, модули</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_savegame" style="text-decoration:none;" class="emFOLD">Работа с файлами сохранений</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_savegame" style="text-decoration:none;" class="emFOLD">Работа с файлами сохранений</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_realtime.html#help_realtime" style="text-decoration:none;" class="emFOLD">Реальное время</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_realtime.html#help_realtime" style="text-decoration:none;" class="emFOLD">Реальное время</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_tuples" style="text-decoration:none;" class="emFOLD">Кортежи</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_tuples" style="text-decoration:none;" class="emFOLD">Кортежи</a>
 </li>
 </ul>
 </li>
@@ -752,24 +752,24 @@ bcolor=rgb(func('hex_in_dec','ff'),func('hex_in_dec','34'),func('hex_in_dec','67
  <span class="em_BLCK">Нюансы написания игр под разные плееры</span>
 <ul>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_classic_qsp.html#help_classic_qsp" style="text-decoration:none;" class="emFOLD">Классический плеер</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_classic_qsp.html#help_classic_qsp" style="text-decoration:none;" class="emFOLD">Классический плеер</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_qspider" style="text-decoration:none;" class="emFOLD">qSpider</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_qspider" style="text-decoration:none;" class="emFOLD">qSpider</a>
 <ul>
 <li>
-<a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_qspider_gamecfg" style="text-decoration:none;" class="emFOLD">Конфигурационный файл</a>
+<a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_qspider_gamecfg" style="text-decoration:none;" class="emFOLD">Конфигурационный файл</a>
 </li>
 <li>
-<a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_qspider_aeroqsp" style="text-decoration:none;" class="emFOLD">Особенности запуска AeroQSP-игр</a>
+<a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_qspider_aeroqsp" style="text-decoration:none;" class="emFOLD">Особенности запуска AeroQSP-игр</a>
 </li>
 </ul>
 </li>
 <li>
- x <a href="https://aleksversus.github.io/howdo_faq/helpful/help_navigator.html#help_navigator" style="text-decoration:none;" class="emFOLD">Quest Navigator</a>
+ x <a href="https://aleksversus.github.io/howdo_faq/wiki/help_navigator.html#help_navigator" style="text-decoration:none;" class="emFOLD">Quest Navigator</a>
 </li>
 <li>
- x <a href="https://aleksversus.github.io/howdo_faq/helpful/help_aeroqsp.html#help_aeroqsp" style="text-decoration:none;" class="emFOLD">AeroQSP</a>
+ x <a href="https://aleksversus.github.io/howdo_faq/wiki/help_aeroqsp.html#help_aeroqsp" style="text-decoration:none;" class="emFOLD">AeroQSP</a>
 </li>
 </ul>
 </li>
@@ -777,30 +777,30 @@ bcolor=rgb(func('hex_in_dec','ff'),func('hex_in_dec','34'),func('hex_in_dec','67
  <span class="em_BLCK">Утилиты и средства разработки</span>
 <ul>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_qgen" style="text-decoration:none;" class="emFOLD">Quest Generator</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_qgen" style="text-decoration:none;" class="emFOLD">Quest Generator</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_debugger.html#help_debugger" style="text-decoration:none;" class="emFOLD">Отладчик</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_debugger.html#help_debugger" style="text-decoration:none;" class="emFOLD">Отладчик</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_txt2gam.html#help_txt2gam" style="text-decoration:none;" class="emFOLD">Работа с утилитой TXT2GAM</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_txt2gam.html#help_txt2gam" style="text-decoration:none;" class="emFOLD">Работа с утилитой TXT2GAM</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_analyzer" style="text-decoration:none;" class="emFOLD">Анализатор кода QSP</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_analyzer" style="text-decoration:none;" class="emFOLD">Анализатор кода QSP</a>
 </li>
 </ul>
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/help_limits.html#help_limits" style="text-decoration:none;" class="emFOLD">Ограничения QSP</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/help_limits.html#help_limits" style="text-decoration:none;" class="emFOLD">Ограничения QSP</a>`
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/howto_start.html#howto_start" style="text-decoration:none;" class="emFOLD">Как сделать?</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/howto_start.html#howto_start" style="text-decoration:none;" class="emFOLD">Как сделать?</a>`
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/help_glossary.html#help_glossary" style="text-decoration:none;" class="emFOLD">Cловарь терминов</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/help_glossary.html#help_glossary" style="text-decoration:none;" class="emFOLD">Cловарь терминов</a>`
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/help_keywords.html#help_keywords" style="text-decoration:none;" class="emFOLD">Ключевые слова. Указатель</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/help_keywords.html#help_keywords" style="text-decoration:none;" class="emFOLD">Ключевые слова. Указатель</a>`
 </li>
 </ul>
         </div>
