--- a/wiki/help_objs.html
+++ b/wiki/help_objs.html
@@ -15,9 +15,9 @@
         <div class="em_AROUND">
             <h1>Справка по QSP</h1>
             <!-- body start -->
-<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/helpful/help_navigator_standalone.html" class="emHREFTT">&lt; Назад, к странице 49</a></div><div><a href="https://aleksversus.github.io/howdo_faq/helpful/help_conditional.html" class="emHREFTT">Вперёд, к странице 51 &gt;</a></div></div>
+<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/wiki/help_navigator_standalone.html" class="emHREFTT">&lt; Назад, к странице 49</a></div><div><a href="https://aleksversus.github.io/howdo_faq/wiki/help_conditional.html" class="emHREFTT">Вперёд, к странице 51 &gt;</a></div></div>
 <p>
-<a href="https://aleksversus.github.io/howdo_faq/helpful/help_acts.html#help_acts" style="text-decoration:none;" class="emFOLD">Назад: Действия</a>
+<a href="https://aleksversus.github.io/howdo_faq/wiki/help_acts.html#help_acts" style="text-decoration:none;" class="emFOLD">Назад: Действия</a>
 
 </p>
 <a id="help_objs"></a><h2>Предметы (инвентарь)</h2>
@@ -48,7 +48,7 @@
 </li>
 </ul>
 <a id="komandy"></a><h3>Команды для работы с Окном предметов</h3>
-<a id="yфЧО"></a><h4>Включение и выключение Окна предметов</h4>
+<a id="jКqА"></a><h4>Включение и выключение Окна предметов</h4>
 <ul>
 <li>
  <span class="em_BLCK"><span class="emOPRT">SHOWOBJS</span></span> [#выражение] - если значение выражения отлично от 0, то показывает <span class="em_BLCK">Список предметов</span>, иначе скрывает его.
@@ -75,7 +75,7 @@ on<span class="Monokai-Operator">,</span>off&nbsp;<span class="Monokai-Operator"
 </div>
 </li>
 </ul>
-<a id="ъТёK"></a><h4>Команды для управления предметами</h4>
+<a id="рPкА"></a><h4>Команды для управления предметами</h4>
 <ul>
 <li>
  <span class="em_BLCK"><span class="emOPRT">ADDOBJ</span></span> [$название],[$путь к файлу изображения],[#индекс] - добавление предмета с названием [$название] и изображением [$путь к файлу изображения] в <span class="em_BLCK">Инвентарь</span>, на место с номером [#индекс]. Пример:
@@ -174,7 +174,7 @@ OBJECTS<span class="Monokai-Operator">[</span><span class="Monokai-String">'па
 </ul>
 </li>
 </ul>
-<a id="FХBС"></a><h4>Команды очистки Окна предметов</h4>
+<a id="bЧлъ"></a><h4>Команды очистки Окна предметов</h4>
 <ul>
 <li>
  <span class="em_BLCK"><span class="emOPRT">KILLOBJ</span></span> - данная команда без указания параметров удаляет все предметы из <span class="em_BLCK">Окна предметов</span>.
@@ -196,7 +196,7 @@ OBJECTS<span class="Monokai-Operator">[</span><span class="Monokai-String">'па
  <span class="em_BLCK"><span class="emOPRT">KILLALL</span></span> - данная команда эквивалентна конструкции "KILLVAR &amp; KILLOBJ", т.е. очищает <span class="em_BLCK">Окно предметов</span> и уничтожает все переменные игры.
 </li>
 </ul>
-<a id="EЯЯH"></a><h4>Функции для обработки предметов</h4>
+<a id="MзШО"></a><h4>Функции для обработки предметов</h4>
 <ul>
 <li>
  <span class="em_BLCK"><span class="emFUNC">$SELOBJ</span></span> - возвращает название выделенного предмета в любом месте игры. Выделение предмета происходит в момент нажатия (щелчка мышью по предмету) и не снимается до применения команды <span class="em_BLCK"><span class="emOPRT">unselect</span></span>.
@@ -275,7 +275,7 @@ end
 [Вперёд:&nbsp;Порядок&nbsp;работы&nbsp;интерпретатора](#help_principle)<br>
 
 </div>
-<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/helpful/help_navigator_standalone.html" class="emHREFTT">&lt; Назад, к странице 49</a></div><div><a href="https://aleksversus.github.io/howdo_faq/helpful/help_conditional.html" class="emHREFTT">Вперёд, к странице 51 &gt;</a></div></div>
+<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/wiki/help_navigator_standalone.html" class="emHREFTT">&lt; Назад, к странице 49</a></div><div><a href="https://aleksversus.github.io/howdo_faq/wiki/help_conditional.html" class="emHREFTT">Вперёд, к странице 51 &gt;</a></div></div>
 <!-- body end -->
             <div class="em_Epigraph">
                 <div class="em_subText">
@@ -303,10 +303,10 @@ end
  `<a href="start.html" style="text-decoration:none;" class="emFOLD">В начало</a>`
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/help_qsp.html#help_qsp" style="text-decoration:none;" class="emFOLD">Что такое QSP?</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/help_qsp.html#help_qsp" style="text-decoration:none;" class="emFOLD">Что такое QSP?</a>`
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/help_locations.html#help_locations" style="text-decoration:none;" class="emFOLD">Локации</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/help_locations.html#help_locations" style="text-decoration:none;" class="emFOLD">Локации</a>`
 </li>
 <li>
  <span class="em_BLCK">Вывод текста</span>
@@ -315,65 +315,65 @@ end
  <a href="help/main.html" style="text-decoration:none;" class="emFOLD">Основное окно описания</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_stat.html#help_stat" style="text-decoration:none;" class="emFOLD">Дополнительное окно описания</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_stat.html#help_stat" style="text-decoration:none;" class="emFOLD">Дополнительное окно описания</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_msgbox" style="text-decoration:none;" class="emFOLD">Диалоговое окно</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_msgbox" style="text-decoration:none;" class="emFOLD">Диалоговое окно</a>
 </li>
 </ul>
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/help_acts.html#help_acts" style="text-decoration:none;" class="emFOLD">Действия</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/help_acts.html#help_acts" style="text-decoration:none;" class="emFOLD">Действия</a>`
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/help_goto.html#help_goto" style="text-decoration:none;" class="emFOLD">Переходы</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/help_goto.html#help_goto" style="text-decoration:none;" class="emFOLD">Переходы</a>`
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/help_objs.html#help_objs" style="text-decoration:none;" class="emFOLD">Предметы (инвентарь)</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/help_objs.html#help_objs" style="text-decoration:none;" class="emFOLD">Предметы (инвентарь)</a>`
 </li>
 <li>
  <span class="em_BLCK">Программирование</span>
 <ul>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_principle.html#help_principle" style="text-decoration:none;" class="emFOLD">Порядок работы интерпретатора</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_principle.html#help_principle" style="text-decoration:none;" class="emFOLD">Порядок работы интерпретатора</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_variables.html#help_variables" style="text-decoration:none;" class="emFOLD">Переменные</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_variables.html#help_variables" style="text-decoration:none;" class="emFOLD">Переменные</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_expressions.html#help_expressions" style="text-decoration:none;" class="emFOLD">Выражения</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_expressions.html#help_expressions" style="text-decoration:none;" class="emFOLD">Выражения</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_coding.html#help_coding" style="text-decoration:none;" class="emFOLD">Программный код</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_coding.html#help_coding" style="text-decoration:none;" class="emFOLD">Программный код</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_cycle" style="text-decoration:none;" class="emFOLD">Циклы</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_cycle" style="text-decoration:none;" class="emFOLD">Циклы</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_arrays.html#help_arrays" style="text-decoration:none;" class="emFOLD">Массивы</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_arrays.html#help_arrays" style="text-decoration:none;" class="emFOLD">Массивы</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_strings.html#help_strings" style="text-decoration:none;" class="emFOLD">Строки</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_strings.html#help_strings" style="text-decoration:none;" class="emFOLD">Строки</a>
 <ul>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_regexp.html#help_regexp" style="text-decoration:none;" class="emFOLD">Регулярные выражения</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_regexp.html#help_regexp" style="text-decoration:none;" class="emFOLD">Регулярные выражения</a>
 </li>
 </ul>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_conditional.html#help_conditional" style="text-decoration:none;" class="emFOLD">Условия</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_conditional.html#help_conditional" style="text-decoration:none;" class="emFOLD">Условия</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_organizing.html#help_organizing" style="text-decoration:none;" class="emFOLD">Пользовательские функции и процедуры</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_organizing.html#help_organizing" style="text-decoration:none;" class="emFOLD">Пользовательские функции и процедуры</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_jump.html#help_jump" style="text-decoration:none;" class="emFOLD">Переходы внутри локации, циклы</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_jump.html#help_jump" style="text-decoration:none;" class="emFOLD">Переходы внутри локации, циклы</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_service_locations.html#help_service_locations" style="text-decoration:none;" class="emFOLD">Служебные локации</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_service_locations.html#help_service_locations" style="text-decoration:none;" class="emFOLD">Служебные локации</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_dynamical.html#help_dynamical" style="text-decoration:none;" class="emFOLD">Динамический код</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_dynamical.html#help_dynamical" style="text-decoration:none;" class="emFOLD">Динамический код</a>
 </li>
 </ul>
 </li>
@@ -381,19 +381,19 @@ end
  <span class="em_BLCK">Оформление</span>
 <ul>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_menu.html#help_menu" style="text-decoration:none;" class="emFOLD">Меню</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_menu.html#help_menu" style="text-decoration:none;" class="emFOLD">Меню</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_sound.html#help_sound" style="text-decoration:none;" class="emFOLD">Звук</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_sound.html#help_sound" style="text-decoration:none;" class="emFOLD">Звук</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_graphics.html#help_graphics" style="text-decoration:none;" class="emFOLD">Графика</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_graphics.html#help_graphics" style="text-decoration:none;" class="emFOLD">Графика</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_interface" style="text-decoration:none;" class="emFOLD">Настройки интерфейса</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_interface" style="text-decoration:none;" class="emFOLD">Настройки интерфейса</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_html.html#help_html" style="text-decoration:none;" class="emFOLD">HTML</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_html.html#help_html" style="text-decoration:none;" class="emFOLD">HTML</a>
 </li>
 </ul>
 </li>
@@ -401,19 +401,19 @@ end
  <span class="em_BLCK">Расширенные возможности</span>
 <ul>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_inputs.html#help_inputs" style="text-decoration:none;" class="emFOLD">Ввод текста игроком</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_inputs.html#help_inputs" style="text-decoration:none;" class="emFOLD">Ввод текста игроком</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_modules.html#help_modules" style="text-decoration:none;" class="emFOLD">Работа с файлами игр, модули</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_modules.html#help_modules" style="text-decoration:none;" class="emFOLD">Работа с файлами игр, модули</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_savegame" style="text-decoration:none;" class="emFOLD">Работа с файлами сохранений</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_savegame" style="text-decoration:none;" class="emFOLD">Работа с файлами сохранений</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_realtime.html#help_realtime" style="text-decoration:none;" class="emFOLD">Реальное время</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_realtime.html#help_realtime" style="text-decoration:none;" class="emFOLD">Реальное время</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_tuples" style="text-decoration:none;" class="emFOLD">Кортежи</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_tuples" style="text-decoration:none;" class="emFOLD">Кортежи</a>
 </li>
 </ul>
 </li>
@@ -421,24 +421,24 @@ end
  <span class="em_BLCK">Нюансы написания игр под разные плееры</span>
 <ul>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_classic_qsp.html#help_classic_qsp" style="text-decoration:none;" class="emFOLD">Классический плеер</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_classic_qsp.html#help_classic_qsp" style="text-decoration:none;" class="emFOLD">Классический плеер</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_qspider" style="text-decoration:none;" class="emFOLD">qSpider</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_qspider" style="text-decoration:none;" class="emFOLD">qSpider</a>
 <ul>
 <li>
-<a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_qspider_gamecfg" style="text-decoration:none;" class="emFOLD">Конфигурационный файл</a>
+<a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_qspider_gamecfg" style="text-decoration:none;" class="emFOLD">Конфигурационный файл</a>
 </li>
 <li>
-<a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_qspider_aeroqsp" style="text-decoration:none;" class="emFOLD">Особенности запуска AeroQSP-игр</a>
+<a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_qspider_aeroqsp" style="text-decoration:none;" class="emFOLD">Особенности запуска AeroQSP-игр</a>
 </li>
 </ul>
 </li>
 <li>
- x <a href="https://aleksversus.github.io/howdo_faq/helpful/help_navigator.html#help_navigator" style="text-decoration:none;" class="emFOLD">Quest Navigator</a>
+ x <a href="https://aleksversus.github.io/howdo_faq/wiki/help_navigator.html#help_navigator" style="text-decoration:none;" class="emFOLD">Quest Navigator</a>
 </li>
 <li>
- x <a href="https://aleksversus.github.io/howdo_faq/helpful/help_aeroqsp.html#help_aeroqsp" style="text-decoration:none;" class="emFOLD">AeroQSP</a>
+ x <a href="https://aleksversus.github.io/howdo_faq/wiki/help_aeroqsp.html#help_aeroqsp" style="text-decoration:none;" class="emFOLD">AeroQSP</a>
 </li>
 </ul>
 </li>
@@ -446,30 +446,30 @@ end
  <span class="em_BLCK">Утилиты и средства разработки</span>
 <ul>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_qgen" style="text-decoration:none;" class="emFOLD">Quest Generator</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_qgen" style="text-decoration:none;" class="emFOLD">Quest Generator</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_debugger.html#help_debugger" style="text-decoration:none;" class="emFOLD">Отладчик</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_debugger.html#help_debugger" style="text-decoration:none;" class="emFOLD">Отладчик</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/help_txt2gam.html#help_txt2gam" style="text-decoration:none;" class="emFOLD">Работа с утилитой TXT2GAM</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/help_txt2gam.html#help_txt2gam" style="text-decoration:none;" class="emFOLD">Работа с утилитой TXT2GAM</a>
 </li>
 <li>
- <a href="https://aleksversus.github.io/howdo_faq/helpful/None.html#help_analyzer" style="text-decoration:none;" class="emFOLD">Анализатор кода QSP</a>
+ <a href="https://aleksversus.github.io/howdo_faq/wiki/None.html#help_analyzer" style="text-decoration:none;" class="emFOLD">Анализатор кода QSP</a>
 </li>
 </ul>
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/help_limits.html#help_limits" style="text-decoration:none;" class="emFOLD">Ограничения QSP</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/help_limits.html#help_limits" style="text-decoration:none;" class="emFOLD">Ограничения QSP</a>`
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/howto_start.html#howto_start" style="text-decoration:none;" class="emFOLD">Как сделать?</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/howto_start.html#howto_start" style="text-decoration:none;" class="emFOLD">Как сделать?</a>`
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/help_glossary.html#help_glossary" style="text-decoration:none;" class="emFOLD">Cловарь терминов</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/help_glossary.html#help_glossary" style="text-decoration:none;" class="emFOLD">Cловарь терминов</a>`
 </li>
 <li>
- `<a href="https://aleksversus.github.io/howdo_faq/helpful/help_keywords.html#help_keywords" style="text-decoration:none;" class="emFOLD">Ключевые слова. Указатель</a>`
+ `<a href="https://aleksversus.github.io/howdo_faq/wiki/help_keywords.html#help_keywords" style="text-decoration:none;" class="emFOLD">Ключевые слова. Указатель</a>`
 </li>
 </ul>
         </div>
